# lightning-hydra-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
