[project]
name = "project-name"
version = "0.0.1"
description = "Describe Your Cool Project"
authors = [
    { name = "Author Name", email = "author@e.mail" }
]
urls = { "Homepage" = "https://github.com/user/project" }
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchmetrics>=0.11.4",
    "lightning>=2.0.0",
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    "rich>=13.0.0",
    "rootutils",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
train_command = "src.train:main"
eval_command = "src.eval:main"

[tool.black]
line-length = 100
target-version = ['py312']
skip-string-normalization = true

[tool.isort]
profile = "black"
filter_files = true

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
